tests/negative/neg_pr1111c_missing_type_args.safe
package neg_pr1111c_missing_type_args

   function identity of t (value : t) returns t
      return value

   function total returns integer
      return identity (1)

